# zephyr-esp32

./: README.md  west.yml
esp32_samples/02_spi/: CMakeLists.txt
esp32_samples/02_spi/src/: main.c
esp32_samples/03_mylibtest/: CMakeLists.txt  README.md  esp32s3_devkitm.overlay  prj.conf
esp32_samples/03_mylibtest/mylib/: Makefile
esp32_samples/03_mylibtest/src/: main.c
